# hixypixy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Shaders/: compile.bat  default.vert.hlsl  example.px.hlsl  example_backup.px.hlsl  font.px.hlsl  font.vert.hlsl  triangle.px.hlsl  triangle.vert.hlsl
Source/: FontRenderer.cpp  FontRenderer.h  ShaderCompiler.cpp  ShaderCompiler.h  main.cpp
